import "protocall.proto";
import "external_avogadrocore.proto";


message OpenRequest {
  optional string format = 1;
  optional string path = 2;
}

message OpenResponse {
  optional external.Avogadro.Core.Molecule molecule = 1;
}

service RemoteMoleculeService {
  rpc open(OpenRequest) returns(OpenResponse);
}
